<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backmain"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="290dp"
        android:layout_height="44dp"
        android:background="@drawable/subject_button"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/computer_science_eng"
        android:textColor="#131F50"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="290dp"
        android:layout_height="44dp"
        android:background="@drawable/subject_button"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/civil_eng"
        android:textColor="#131F50"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.634"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="290dp"
        android:layout_height="44dp"
        android:background="@drawable/subject_button"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/electronics_compu_eng"
        android:textColor="#131F50"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="290dp"
        android:layout_height="44dp"
        android:background="@drawable/subject_button"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/electronics_comm_eng"
        android:textColor="#131F50"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button1"
        android:layout_width="290dp"
        android:layout_height="44dp"
        android:background="@drawable/subject_button"
        android:fontFamily="@font/alegreya_bold"
        android:text="@string/mechanical_eng"
        android:textColor="#131F50"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button12"
        android:layout_width="153dp"
        android:layout_height="36dp"
        android:background="@drawable/subject_button"
        android:fontFamily="@font/alegreya_bold"
        android:text="Contact Us"
        android:textColor="#131F50"
        android:textSize="22sp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>